jdk.jfr.jcmd.TestJcmdDumpLimited fails due to erronous processing of -XX:FlightRecorderOptions

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • jfr
    • b20

        jib > ACTION: main -- Failed. Unexpected exit from test [exit code: 1]
        jib > REASON: User specified action: run main/othervm -XX:FlightRecorderOptions jdk.jfr.jcmd.TestJcmdDumpLimited
        jib > TIME: 0.63 seconds
        jib > messages:
        jib > command: main -XX:FlightRecorderOptions jdk.jfr.jcmd.TestJcmdDumpLimited
        jib > reason: User specified action: run main/othervm -XX:FlightRecorderOptions jdk.jfr.jcmd.TestJcmdDumpLimited
        jib > Mode: othervm [/othervm specified]
        jib > Additional options from @modules: --add-modules jdk.jfr,jdk.jcmd
        jib > elapsed time (seconds): 0.63
        jib > configuration:
        jib > Boot Layer
        jib > add modules: jdk.jfr jdk.jcmd
        jib >
        jib > STDOUT:
        jib > [0.549s][error][arguments] Unknown argument '.¢' in diagnostic command
        jib > Error occurred during initialization of VM
        jib > Failure when starting JFR on_vm_start

              Assignee:
              Markus Grönlund
              Reporter:
              Markus Grönlund
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: