src/hotspot/share/jfr/jfr.hpp
@@ -49,8 +49,8 @@ class Jfr : AllStatic {
   static void on_thread_exit(JavaThread* thread);
   static void on_thread_destruct(Thread* thread);
   static void on_vm_shutdown(bool exception_handler = false);
-  static bool on_start_flight_recording_option(const JavaVMOption** option, char* tail);
-  static bool on_flight_recorder_option(const JavaVMOption** option, char* tail);
+  static bool on_flight_recorder_option(const JavaVMOption** option, char* delimiter);
+  static bool on_start_flight_recording_option(const JavaVMOption** option, char* delimiter);
   static void weak_oops_do(BoolObjectClosure* is_alive, OopClosure* f);
   static Thread* sampler_thread();
 };
